<resources>
    <string name="app_name">Disquette</string>

    <!-- Home -->
    <string name="description_disque">Disque</string>
    <string name="container_disque">Une disquette a nous proposer ?</string>
    <string name="description_disque_count">1</string>
    <string name="disque_like">0</string>
    <string name="disque_dislike">0</string>
    <string name="bottom_home">home</string>
    <string name="bottom_favori">favori</string>
    <string name="bottom_new">new</string>


    <!-- Profile -->
    <string name="menu_profile">Profil :</string>
    <string name="menu_profile_user_name_input">@string/menu_profile_user_name</string>
    <string name="menu_profile_email_input">E-mail</string>
    <string name="menu_profile_password_input">Mot de passe</string>
    <string-array name="menu_profile_sex_input">
        <item>Homme</item>
        <item>Femme</item>
    </string-array>
    <string name="menu_profile_save_button">Enregistrer</string>
    <string name="menu_profile_validate_button">Valider</string>
    <string name="menu_profile_register">Inscription</string>
    <string name="menu_profile_log_in">Connexion</string>
    <string name="menu_profile_user_name">Pseudo</string>

    <!-- A revoir -->
    <string name="menu_profile_Terms">ReoX</string>
    <string name="name_disque">Disque</string>
    <string name="add_disc">ajoutez disquette</string>
    <string name="line">My text with lines above and below</string>


    <!-- Ajouter disquette pop up -->
    <string name="contenu_disque_input">@string/container_disque</string>
    <string name="name_chat">chat</string>
    <string name="name_user">user</string>
    <string name="send_the_disc">Send the disc</string>
    <string name="enter_your_message">Entrez votre message</string>
    <string name="validate_message">Validate message</string>
    <string name="e_mail">E-mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="pseudo">Pseudo</string>
    <string name="se_connecter">Se connecter?</string>
    <string name="back_to_the_profil_fragment">Back to the profil fragment</string>
    <string name="use_name">Use Name</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="charger_image">charger image</string>
    <string name="voulez_vous_changer_votre_photo_de_profil">Voulez-vous changer votre photo de profil?</string>
    <string name="valide">Valide</string>
    <string name="profile_picture">profile_picture</string>
    <string name="disquette">Disquette</string>


</resources>