<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color2"
    android:padding="30dp"
    android:id="@+id/constraint_fragment_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            android:fontFamily="@font/baloo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="Bienvenue !"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/background_color"
            android:layout_gravity="center"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/text2"
            android:fontFamily="@font/baloo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rejoins-nous, on a des cookies!"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/background_color"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="150dp">
            <Button
                android:id="@+id/register_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_color"
                android:text="@string/menu_profile_register"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:elevation="8dp"
                />

            <Button
                android:id="@+id/login_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_color"
                android:text="@string/menu_profile_log_in"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:elevation="8dp"
                />
        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background_color2"
            android:gravity="center"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/menu_profile_Terms"
                android:textColor="@color/background_color_opacity"
                android:textSize="24sp" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
